--- a/config/menu.yml
+++ b/config/menu.yml
@@ -5,7 +5,7 @@ spring:
     name: menu
   datasource:
     name: orderingsystem
-    url: jdbc:mysql://localhost:3306/orderingsystem?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/orderingsystem?useUnicode=true&characterEncoding=UTF-8?useSSL=true&serverTimezone=UTC
     username: root
     password: dc01
 eureka:
